[package]
name = "simple-ssl-acme-cloudflare"
version = "1.0.5"
authors = ["Magic Len <len@magiclen.org>"]
repository = "https://github.com/magiclen/simple-ssl-acme-cloudflare"
homepage = "https://magiclen.org/simple-ssl-acme-cloudflare"
keywords = ["ssl", "certificate", "CloudFlare", "ACME", "https"]
categories = ["command-line-utilities"]
description= "Simple SSL with ACME and CloudFlare is a tool to simply apply SSL certificates by using OpenSSL and ACME via CloudFlare DNS."
readme = "README.md"
license = "MIT"

[badges]
travis-ci = { repository = "magiclen/simple-ssl-acme-cloudflare", branch = "master" }

[profile.release]
panic = "abort"

[dependencies]
subprocess = "0.1.13"
clap = "2.32.0"
lazy_static = "1.1.0"
dirs = "1.0.3"