[package]
name = "simple-ssl-acme-cloudflare"
version = "1.0.11"
authors = ["Magic Len <len@magiclen.org>"]
edition = "2018"
repository = "https://github.com/magiclen/simple-ssl-acme-cloudflare"
homepage = "https://magiclen.org/simple-ssl-acme-cloudflare"
keywords = ["ssl", "certificate", "CloudFlare", "ACME", "https"]
categories = ["command-line-utilities"]
description = "Simple SSL with ACME and CloudFlare is a tool to simply apply SSL certificates by using OpenSSL and ACME via CloudFlare DNS."
readme = "README.md"
license = "MIT"
include = ["src/**/*", "Cargo.toml", "README.md", "LICENSE"]

[profile.release]
lto = true
codegen-units = 1
panic = "abort"

[dependencies]
clap = "2.33.1"
concat-with = "0.2"
terminal_size = "0.1"

execute = "0.2.4"

[dependencies.path-absolutize]
version = "3"
features = ["lazy_static_cache"]