[package]
name = "simple-ssl-acme-cloudflare"
version = "1.1.0"
authors = ["Magic Len <len@magiclen.org>"]
edition = "2021"
rust-version = "1.70"
repository = "https://github.com/magiclen/simple-ssl-acme-cloudflare"
homepage = "https://magiclen.org/simple-ssl-acme-cloudflare"
keywords = ["ssl", "certificate", "CloudFlare", "ACME", "https"]
categories = ["command-line-utilities"]
description = "Simple SSL with ACME and CloudFlare is a tool to simply apply SSL certificates by using OpenSSL and ACME via CloudFlare DNS."
license = "MIT"
include = ["src/**/*", "Cargo.toml", "README.md", "LICENSE"]

[profile.release]
lto = true
codegen-units = 1
panic = "abort"
strip = true

[dependencies]
clap = { version = "4", features = ["derive", "env"] }
concat-with = "0.2"
terminal_size = "0.3"

anyhow = "1"

execute = "0.2"